Fix line spacing

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -37,7 +37,3 @@ form {
 textarea {
   white-space: pre-line;
 }
-
-p {
-  white-space: pre-line;
-}
